# pybat

./: README.md  main.py  pyproject.toml
task-creation-powershell/: create-task.py  task.ps1
